[package]
name = "libfsw"
version = "0.1.0"
edition = "2024"

[lib]
name = "libfsw"
path = "src/lib.rs"

[[bin]]
name = "fsw-cli"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
gimli = "0.32.3"
log = "0.4.29"
memmap2 = "0.9.9"
object = "0.38.0"
rand = "0.9.2"
thiserror = "2.0.17"
